--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 										<article>
 											<div class="image"><img src="images/brahim.png" alt="" /></div>
 											<h3 class="major">Brahim El bouziani</h3>
-											<p>Founder of 1337 StartUps & IT student at 1337.</p>
+											<p>Manager of 1337 StartUps & IT student at 1337.</p>
 										</article>
 										<article>
 											<div class="image"><img src="images/younes.jpg" alt="" /></div>
