--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 										<article>
 											<div class="image"><img src="images/mouad.jpg" alt="" /></div>
 											<h3 class="major">Mouad Sidqi</h3>
-											<p>Communication & IT student at 1337 & Founder of 1337 Gaming Club.</p>
+											<p>Communication & IT student at 1337 & Founder of 1337 GameDev Club.</p>
 										</article>
 										<article></article>
 									</section>
